[package]
name = "ssi"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"
description = "Substrate Storage Inspector"


[dependencies]
rocksdb = "0.14.0"
hex-literal = "0.2.1"
colored = "1.9"
hash-db = "0.15.2"

# current version is 0.21 but build fail
# Issue open at https://github.com/paritytech/trie/issues/95
trie-db = "0.19.2"
trie = { package="sp-trie", git = 'https://github.com/yanganto/substrate.git', branch='expose-hash-roots' }
sp-std = { package="sp-std", git = 'https://github.com/yanganto/substrate.git', branch='expose-hash-roots' }
log = "0.4.8"
clap = "2.33.1"
hex = "0.4.2"
failure = "0.1.8"
failure_derive ="0.1.8"
